# ab-mcts-arc2

./: .gitignore  README.md  analyze_token.py  pyproject.toml  sorted_task_ids.txt  tokenized_summary.csv  txt.py
eval/: proc_results.py  visualize.py
experiments/arc2/: arc_agi_2_eval_full.txt  arc_agi_2_eval_short.txt  generate_prompts.py  prompt.py  run.py  utils.py
experiments/arc2/configs/: config.yaml  kaggle.yaml
outputs-past/arc2/arc2_abmcts_algo_ABMCTSA_beta/: df_reward.csv  df_test.csv
outputs-past/arc2/arc2_abmcts_algo_ABMCTSA_beta/1818057f/.hydra/: config.yaml  hydra.yaml  overrides.yaml
outputs-past/arc2/arc2_abmcts_algo_ABMCTSA_beta/1818057f/checkpoints/: checkpoint_n_answers_1.pkl  checkpoint_n_answers_2.pkl  checkpoint_n_answers_4.pkl  checkpoint_n_answers_5.pkl  checkpoint_n_answers_8.pkl  checkpoint_n_answers_8_proc_result.json
outputs-past/arc2/arc2_abmcts_algo_ABMCTSA_beta/1818057f/costs/: cost_summary_n_answers_1.json  cost_summary_n_answers_2.json  cost_summary_n_answers_4.json  cost_summary_n_answers_5.json  cost_summary_n_answers_8.json  time_summary.json  time_summary_n_answers_1.json  time_summary_n_answers_2.json  time_summary_n_answers_4.json  (+1 more)
scripts/: run_eval.sh  run_exp_kaggle  run_exp_kaggle.sh  run_experiments.sh
src/ab_mcts_arc2/: eval_result.py  evaluate_code.py  llm_generation_interface.py  model_base.py  split_challenges.py  split_solutions.py
src/ab_mcts_arc2/llm/: claude_api.py  gemini_api.py  llm_builder.py  llm_interface.py  openai_api.py
src/ab_mcts_arc2/prompts/: base.py
src/ab_mcts_arc2/prompts/arc/: grid_repr.py
src/ab_mcts_arc2/tasks/: base.py
src/ab_mcts_arc2/tasks/arc/: task.py
src/ab_mcts_arc2/unittest_templates/: test_transform.py
(+9 files in other folders)
