[project]
name = "ab-mcts-arc2"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "huggingface-hub>=0.20.0",
    "hydra-core>=1.3.0",
    "ipywidgets>=8.0.0",
    "jupyter>=1.0.0",
    "litellm>=1.40.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.60.0",
    "treequest[abmcts-m] @ git+https://github.com/SakanaAI/treequest.git",
    "tenacity>=8.0.0",
    "anthropic[bedrock]>=0.30.0",
    "black>=23.0.0",
    "google-genai>=1.0.0",
    "seaborn>=0.12.0",
    "fire>=0.5.0",
    "joblib>=1.3.0",
    "networkx>=3.0",
    "pygraphviz>=1.10",
]

[dependency-groups]
dev = [
    "ruff>=0.1.0",
]

[tool.hatch.metadata]
allow-direct-references = true

[build-system]
requires = ["hatchling>=1.24"]
build-backend = "hatchling.build"
